issue-173 remove "overflow-anchor: none" requirement

--- a/demo/styles.css
+++ b/demo/styles.css
@@ -2,10 +2,6 @@ body {
   line-height: 1.4;
 }
 
-.entire-window {
-  overflow-anchor: none;
-}
-
 h1 {
   font-size: 42px;
   letter-spacing: -.015em;
@@ -205,7 +201,6 @@ input[type=checkbox], input[type=radio] {
 .demo .work .viewport, .viewport {
   width: 150px;
   height: 250px;
-  overflow-anchor: none;
   overflow-y: auto;
   margin-bottom: 15px;
 }
@@ -213,7 +208,6 @@ input[type=checkbox], input[type=radio] {
 .demo .work .viewport.horizontal {
   width: 250px;
   height: 100px;
-  overflow-anchor: none;
   overflow-x: scroll;
   overflow-y: hidden;
   white-space: nowrap;
